--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <a href="#" class="flex items-center gap-3">
-          <img src="images/logo.jpg" alt="KS Lawn Ranger logo" class="h-10 w-10 rounded-full object-cover ring-2 ring-emerald-700"/>
+          <img src="images/logo.jpg" alt="KS Lawn Ranger logo" class="h-10 w-10 rounded-full object-contain object-center bg-white ring-2 ring-emerald-700"/>
           <div class="leading-tight">
             <div class="font-semibold">KS Lawn Ranger LLC</div>
             <div class="text-xs text-gray-500">Manhattan • Wamego • St. George • Alma • Junction City</div>
