--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
   <section id="reviews" class="py-14 md:py-20 bg-emerald-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-end justify-between mb-6">
-        <h2 class="text-3xl md:text-4xl font-bold">What Neighbors Say</h2>
+        <h2 class="text-3xl md:text-4xl font-bold">Client Testimonials</h2>
         <a href="https://g.page/r/CQ3hgayPFJW2EBM/review" target="_blank" rel="noopener nofollow" class="text-sm text-[var(--brand)] hover:underline">Leave a Google review →</a>
       </div>
       <script src="https://elfsightcdn.com/platform.js" async></script>
