--- a/index.html
+++ b/index.html
@@ -314,15 +314,15 @@
 
       <!-- Pair 1: AFTER left, BEFORE right -->
       <div class="ba-wrapper aspect-[3/2] bg-gray-100 ring-1 ring-gray-200 shadow-soft rounded-2xl mb-8" data-ba>
-        <img src="images/after-1.jpg" alt="Before 1" class="w-full h-full object-cover" decoding="async" loading="lazy"/>
-        <div class="ba-after"><div class="ba-resize"><img src="images/before-1.jpg" alt="After 1" class="w-full h-full object-cover" decoding="async" loading="lazy"/></div></div>
+        <img src="images/before-1.jpg" alt="Before 1" class="w-full h-full object-cover" decoding="async" loading="lazy"/>
+        <div class="ba-after"><div class="ba-resize"><img src="images/after-1.jpg" alt="After 1" class="w-full h-full object-cover" decoding="async" loading="lazy"/></div></div>
         <div class="ba-handle" aria-label="Drag to compare">↔</div>
       </div>
 
       <!-- Pair 2 -->
       <div class="ba-wrapper aspect-[3/2] bg-gray-100 ring-1 ring-gray-200 shadow-soft rounded-2xl" data-ba>
-        <img src="images/after-2.jpg" alt="Before 2" class="w-full h-full object-cover" decoding="async" loading="lazy"/>
-        <div class="ba-after"><div class="ba-resize"><img src="images/before-2.jpg" alt="After 2" class="w-full h-full object-cover" decoding="async" loading="lazy"/></div></div>
+        <img src="images/before-2.jpg" alt="Before 2" class="w-full h-full object-cover" decoding="async" loading="lazy"/>
+        <div class="ba-after"><div class="ba-resize"><img src="images/after-2.jpg" alt="After 2" class="w-full h-full object-cover" decoding="async" loading="lazy"/></div></div>
         <div class="ba-handle" aria-label="Drag to compare">↔</div>
       </div>
 
